[gd_scene load_steps=10 format=3 uid="uid://cabuyfilw0mxk"]

[ext_resource type="Texture2D" uid="uid://x6cy75ru6p25" path="res://assets/game/Tilesets/ship/crafting_station.png" id="1_4thpu"]
[ext_resource type="Script" uid="uid://bsm2qdp00jbpv" path="res://scenes/ship/crafting_station.gd" id="1_imhfl"]
[ext_resource type="PackedScene" uid="uid://bw48285mk0711" path="res://scenes/components/interactable_label_component.tscn" id="2_imhfl"]
[ext_resource type="PackedScene" uid="uid://batnl3ulwlbrb" path="res://scenes/components/interactable_component.tscn" id="4_imhfl"]
[ext_resource type="PackedScene" uid="uid://cp7n1jr5pv1jj" path="res://scenes/components/item_spawner_component.tscn" id="5_35xlv"]
[ext_resource type="PackedScene" uid="uid://bom8wled5o01v" path="res://scenes/components/click_button_audio.tscn" id="6_xo0ui"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imhfl"]
size = Vector2(64, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_35xlv"]
radius = 59.0339

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_xo0ui"]
polygon = PackedVector2Array(-17, 22, -17, -4, 17, -4, 17, 22)

[node name="CraftingStation" type="StaticBody2D"]
collision_layer = 2048
collision_mask = 0
script = ExtResource("1_imhfl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4thpu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_imhfl")

[node name="InteractableLabelComponent" parent="." instance=ExtResource("2_imhfl")]
offset_left = -18.0
offset_top = -91.0
offset_right = 18.0
offset_bottom = -55.0

[node name="InteractableComponent" parent="." instance=ExtResource("4_imhfl")]
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="InteractableComponent"]
shape = SubResource("CircleShape2D_35xlv")
debug_color = Color(0.831205, 0.204235, 0.821216, 0.42)

[node name="ItemSpawnerComponent" parent="." instance=ExtResource("5_35xlv")]
spawn_radius_max = 86.0
spawn_radius_min = 43.0

[node name="CraftTimer" type="Timer" parent="."]

[node name="ClickButton" parent="." instance=ExtResource("6_xo0ui")]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_xo0ui")
occluder_light_mask = 0
